fixed flickering

--- a/client2/static/css/main.less
+++ b/client2/static/css/main.less
@@ -463,6 +463,7 @@ div {
         height: 95px;
         background: url(../../static/img/seat-taken.png) no-repeat 50% 50%;
         position: absolute;
+        -webkit-backface-visibility: hidden;
 
         -webkit-transition: all 0.25s linear;
         -webkit-filter: grayscale(0%) brightness(0%);
